12 th Feb Twilio Add

--- a/config/config.env
+++ b/config/config.env
@@ -2,3 +2,7 @@ MONGO_URI=mongodb+srv://musicapp:flyweisnode5@cluster0.pw96pvt.mongodb.net/rohit
 PORT=4000
 
 jwtSecret=12345Flyweis
+
+accountSid=AC1e5267b05a62ae1b6d1252802b8b1efa
+authToken=5378c54cf06aa9f976fda4c2f66023a7
+twilioPhoneNumber=+16592877133
